--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/preact": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^4.0.4",
     "astro": "^3.0.8",
     "preact": "^10.17.1",
     "tailwindcss": "^3.3.3"
